# ports

./: Cargo.toml  Justfile  Makefile  README.md
.github/workflows/: release.yml
src/: main.rs
src/cmd/: lsof.rs  ps.rs
