[package]
name = "ports"
version = "0.7.0"
edition = "2024"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "List listening ports."
license = "GPL-3.0-or-later"
repository = "https://github.com/qrichert/ports.git"
readme = "README.md"
keywords = ["ports", "listen", "cli"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
# Output text through a pager.
lessify = "0.4.0"
# Output in tabular format.
verynicetable = "0.6.2"
